<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProfileActivity">
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/userProfileImageView"
            android:layout_marginTop="16dp" app:layout_constraintEnd_toStartOf="@+id/userNameEditText"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="20dp"
            android:contentDescription="TODO"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/userNameEditText"
            android:layout_marginTop="56dp" app:layout_constraintStart_toEndOf="@+id/userProfileImageView"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="16dp" android:hint="@string/hint_profile_name_edit_text"/>
    <TextView
            android:text="@string/text_view_user_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userCourseTextView"
            app:layout_constraintStart_toStartOf="@+id/userCourseEditText" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/userProfileImageView"/>
    <EditText
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textAutoComplete"
            android:text="Name"
            android:ems="10"
            android:id="@+id/userCourseEditText" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.421"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/userCourseTextView"
            android:hint="@string/hint_course_edit_text"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/raTextView"
            app:layout_constraintStart_toStartOf="@+id/raEditText" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/userCourseEditText" tools:text="@string/text_view_ra"/>
    <EditText
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:text="Name"
            android:ems="10"
            android:id="@+id/raEditText" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.421"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/raTextView"
            android:inputType="number" android:hint="@string/hint_ra_edit_text"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emailTextView"
            app:layout_constraintStart_toStartOf="@+id/emailEditText" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/raEditText" tools:text="@string/text_view_email"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:text="Name"
            android:ems="10"
            android:id="@+id/emailEditText"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/emailTextView"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:hint="@string/hint_email_edit_text"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phoneNumberTextView"
            app:layout_constraintStart_toStartOf="@+id/phoneNumberEditText" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText" android:text="@string/text_view_email"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/phoneNumberEditText"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/phoneNumberTextView"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:hint="@string/hint_email_edit_text"/>
    <TextView
            android:text="@string/text_view_interest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/interestTextView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumberEditText"
    />
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/interestEditText"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/interestTextView"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:hint="@string/hint_interest_edit_text"/>
</androidx.constraintlayout.widget.ConstraintLayout>