<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   tools:context=".ProfileFragment"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:paddingBottom="60dp">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/scrollView2">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:layout_width="120dp"
                        android:layout_height="match_parent" tools:srcCompat="@tools:sample/avatars"
                        android:id="@+id/userProfileImageView"
                        app:srcCompat="@drawable/gde"
                        android:adjustViewBounds="true" android:layout_marginTop="16dp"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="32dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                />
                <TextView
                        android:text="@string/text_view_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/subjectTextView"
                        android:layout_marginBottom="11dp"
                        app:layout_constraintBottom_toTopOf="@+id/subjectFieldTextView"
                        android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginStart="8dp" app:layout_constraintVertical_bias="1.0"
                        app:layout_constraintStart_toStartOf="@+id/subjectFieldTextView"/>
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/subjectFieldTextView"
                        android:importantForAutofill="no"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="60dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:hint="@string/hint_profile_name_edit_text"
                        android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/userProfileImageView"
                        android:layout_marginStart="16dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:minHeight="138dp">

                <TextView
                        android:text="@string/text_view_user_course"
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:id="@+id/locationTextView"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text|textAutoComplete"
                        android:ems="10"
                        android:id="@+id/locationFieldTextView"
                        android:hint="@string/hint_course_edit_text" android:autofillHints=""
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/locationTextView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
                <TextView
                        android:text="@string/text_view_ra"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/dataInitTextView"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/locationFieldTextView"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/dataInitFieldTextView"
                        android:inputType="number" android:hint="@string/hint_ra_edit_text" android:autofillHints=""
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/dataInitTextView" app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
                <TextView
                        android:text="@string/text_view_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/dataEndTextView"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/dataInitFieldTextView"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:id="@+id/dataEndFieldTextView"
                        android:hint="@string/hint_email_edit_text"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/dataEndTextView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/descriptionTextView"
                        android:text="@string/text_view_phone"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="16dp" android:layout_marginStart="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/dataEndFieldTextView"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/descriptionFieldTextView"
                        android:hint="@string/hint_phone_edit_text"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:inputType="phone"/>
                <TextView
                        android:text="@string/text_view_interest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/interestTextView"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/descriptionFieldTextView"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:ems="10"
                        android:id="@+id/interestFieldTextView"
                        android:hint="@string/hint_interest_edit_text"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/interestTextView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:src="@android:drawable/ic_menu_edit"
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:clickable="true" android:id="@+id/editProfileButton"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" android:focusable="true"/>
</androidx.constraintlayout.widget.ConstraintLayout>