<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".groupEditActivity">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:layout_width="96dp"
                        android:layout_height="match_parent" tools:srcCompat="@tools:sample/avatars"
                        android:id="@+id/userProfileImageView"
                        app:srcCompat="@drawable/gde"
                        android:adjustViewBounds="true" android:layout_marginTop="16dp"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="32dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                />
                <TextView
                        android:text="@string/text_main_subject"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/userNameTextView"
                        android:layout_marginBottom="11dp"
                        app:layout_constraintBottom_toTopOf="@+id/userNameEditText"
                        android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="1.0"
                        app:layout_constraintStart_toStartOf="@+id/userNameEditText"/>
                <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/userNameEditText"
                        android:importantForAutofill="no"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="60dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:hint="@string/hint_main_subject"
                        android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/userProfileImageView"
                        android:layout_marginStart="16dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:minHeight="138dp">

                <TextView
                        android:text="@string/text_location"
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:id="@+id/userCourseTextView"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text|textAutoComplete"
                        android:ems="10"
                        android:id="@+id/userCourseEditText"
                        android:hint="@string/hint_location" android:autofillHints=""
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/userCourseTextView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
                <TextView
                        android:text="@string/text_begin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/raTextView"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/userCourseEditText"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/raEditText"
                        android:inputType="date" android:hint="@string/hint_begin"
                        android:autofillHints=""
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/raTextView" app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
                <TextView
                        android:text="@string/text_ends"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/emailTextView"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/raEditText"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:ems="10"
                        android:id="@+id/emailEditText"
                        android:hint="@string/hint_ends"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/emailTextView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/phoneNumberTextView"
                        android:text="@string/text_descrition"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="16dp" android:layout_marginStart="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/emailEditText"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/phoneNumberEditText"
                        android:hint="@string/hint_content"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/phoneNumberTextView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
                        android:inputType="text"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>