<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_height="140dp" android:layout_width="match_parent"
                                                   android:id="@+id/itemListConstrainLayout">
    <ImageView
            tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/groupImageView"
            android:layout_width="102dp" android:layout_height="104dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:scaleType="fitXY" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:contentDescription="@string/groupImage"/>
    <TextView
            android:text="@string/textview"
            android:layout_width="256dp"
            android:layout_height="0dp"
            android:id="@+id/secInfoGrouptextView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/groupImageView" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.571" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/mainInfoGrouptextView" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent" android:textAllCaps="false"
            app:layout_constraintVertical_bias="1.0"/>
    <TextView
            android:text="@string/mainInfoGroupTextView"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:id="@+id/mainInfoGrouptextView" android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/groupImageView" android:layout_marginStart="8dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/default_item_text"/>
</androidx.constraintlayout.widget.ConstraintLayout>